name: fx-for-hasql
version: 0.1
synopsis: Command-line arguments parsing for Hasql
category: Command Line, Options, Hasql
homepage: https://github.com/nikita-volkov/fx-for-hasql
bug-reports: https://github.com/nikita-volkov/fx-for-hasql/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019 Nikita Volkov
license: MIT
license-file: LICENSE
build-type: Simple
cabal-version: >=1.10

source-repository head
  type: git
  location: git://github.com/nikita-volkov/fx-for-hasql.git

library
  hs-source-dirs: library
  default-extensions: BangPatterns, ConstraintKinds, DataKinds, DefaultSignatures, DeriveDataTypeable, DeriveFoldable, DeriveFunctor, DeriveGeneric, DeriveTraversable, EmptyDataDecls, FlexibleContexts, FlexibleInstances, FunctionalDependencies, GADTs, GeneralizedNewtypeDeriving, InstanceSigs, LambdaCase, LiberalTypeSynonyms, MagicHash, MultiParamTypeClasses, MultiWayIf, NoImplicitPrelude, NoMonomorphismRestriction, OverloadedStrings, PatternGuards, ParallelListComp, QuasiQuotes, RankNTypes, RecordWildCards, ScopedTypeVariables, StandaloneDeriving, TemplateHaskell, TupleSections, TypeFamilies, TypeOperators, UnboxedTuples
  default-language: Haskell2010
  exposed-modules:
    FxForHasql
  other-modules:
    FxForHasql.Prelude
  build-depends:
    base >=4.9 && <5,
    bytestring >=0.10 && <0.11,
    hasql >=1.4 && <1.5,
    hasql-transaction >=0.10.0.1 && <0.11,
    fx,
    text >=1 && <2
